# myvae

./: .gitignore  README.md  infer.py  main.py  pyproject.toml  test.py  train_vae.py
config/: train.yaml
src/myvae/: __init__.py  infer.py
src/myvae/models/: common.py  configs.py  decoder.py  down.py  encoder.py  mid.py  up.py  vae.py
src/myvae/train/: __init__.py  dataset.py  dataset_filters.py  loss.py  metrics.py  parse_args.py  utils.py  watchdog.py
src/myvae/wavelet/: __init__.py  base.py  wavelet.py
src/train/: dataset.py
