[project]
name = "myvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hnmr", email = "hnmr293@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "jsonargparse>=4.34.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
