[project]
name = "myvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hnmr", email = "hnmr293@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.1",
    "av>=14.0.0",
    "einops>=0.8.0",
    "huggingface-hub[cli,hf-transfer]>=0.26.2",
    "jsonargparse>=4.34.0",
    "lpips>=0.1.4",
    "natsort>=8.4.0",
    "pillow>=11.0.0",
    "pytorch-optimizer>=3.2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "wandb>=0.18.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pytorch-optimizer = { git = "https://github.com/kozistr/pytorch_optimizer" }
